# vcode

./: Cargo.toml  LICENSE  README.md
src/: bulk.rs  commands.rs  config.rs  detector.rs  editor.rs  lib.rs  main.rs
src/core/: clipboard.rs  config.rs  editor.rs  mod.rs  project.rs
src/scanner/: detector.rs  mod.rs  scanner.rs
src/ui/: display.rs  logger.rs  mod.rs
