[package]
name = "vcode"
version = "0.2.0"
edition = "2024"
description = "A fast, modern CLI project launcher for your favorite code editor"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.8.0"
dialoguer = "0.11"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
comfy-table = "7.1.3"

[dev-dependencies]
tempfile = "3.13"
